# PetriNet

./: .clang-tidy  .gitignore  .lintr  CMakeLists.txt  README.md  analysis.R  compile.sh  config.json  env.sh  environment.yml  test.sh
.github/workflows/: cmake-single-platform.yml
Tests/: CMakeLists.txt
Tests/src/: simple_tests.cpp
data/examples/: glycolysis+ppp+cac+ATPMain.json  glycolysis+ppp+cac+ATPMain_SINK_HACK.json  glycolysis_selfmade.json  pyruvate.json  smaller_example.json
libs/: CMakeLists.txt
libs/petriNet/include/: petriNet.hpp
libs/petriNet/src/: petriNet.cpp
scripts/: analysis.R  plot.py
src/: CMakeLists.txt  main.cpp  run.cpp  utils.cpp  utils.hpp
test/: CMakeLists.txt
test/examples/loading/: circle.json  circle_to_rectangle.json  malformed_json.json  pump.json  rectangle.json  rectangle_to_circle.json  smallest_example.json  stoichiometry.json
test/src/: simple_tests.cpp
